erDiagram
  ROLES ||--o{ USERS : has
  ORGANIZATIONAL_UNITS ||--o{ ORGANIZATIONAL_UNITS : contains
  ORGANIZATIONAL_UNITS ||--o{ USERS : assigned_users
  ORGANIZATIONAL_UNITS ||--o{ PROGRAMS : owns
  USERS ||--o{ PROGRAMS : creates
  USERS ||--o{ PROGRAM_ADMIN_ASSIGNMENTS : assigned_admin
  USERS ||--o{ PROGRAM_ADMIN_ASSIGNMENTS : assigned_by
  PROGRAMS ||--o{ PROGRAM_ADMIN_ASSIGNMENTS : has
  PROGRAMS ||--o{ EVENTS : contains
  USERS ||--o{ EVENTS : creates
  EVENTS ||--o{ EVENT_ATTENDANCE_FIELD_SETTINGS : configures
  ATTENDANCE_FORM_FIELDS ||--o{ EVENT_ATTENDANCE_FIELD_SETTINGS : defines
  EVENTS ||--o{ ATTENDANCE_RECORDS : receives
  ATTENDANCE_RECORDS ||--o| ATTENDANCE_RECORD_ADDRESSES : has_address
  EVENTS ||--o{ ATTENDANCE_SHEET_EXPORTS : has
  USERS ||--o{ ATTENDANCE_SHEET_EXPORTS : generates
  USERS ||--o{ AUDIT_LOGS : performs
  PSGC_REGIONS ||--o{ PSGC_PROVINCES : contains
  PSGC_REGIONS ||--o{ PSGC_CITIES_MUNICIPALITIES : contains
  PSGC_PROVINCES ||--o{ PSGC_CITIES_MUNICIPALITIES : contains
  PSGC_CITIES_MUNICIPALITIES ||--o{ PSGC_BARANGAYS : contains
  PSGC_REGIONS ||--o{ ATTENDANCE_RECORD_ADDRESSES : selected_region
  PSGC_PROVINCES ||--o{ ATTENDANCE_RECORD_ADDRESSES : selected_province
  PSGC_CITIES_MUNICIPALITIES ||--o{ ATTENDANCE_RECORD_ADDRESSES : selected_city_municipality
  PSGC_BARANGAYS ||--o{ ATTENDANCE_RECORD_ADDRESSES : selected_barangay

  ROLES {
    BIGINT role_id PK
    VARCHAR role_name UK
    VARCHAR description
    BOOLEAN is_active
    DATETIME created_at
    DATETIME updated_at
  }

  USERS {
    BIGINT user_id PK
    BIGINT role_id FK
    BIGINT org_unit_id FK
    VARCHAR full_name
    VARCHAR email UK
    VARCHAR password_hash
    ENUM account_status
    DATETIME created_at
    DATETIME updated_at
  }

  ORGANIZATIONAL_UNITS {
    BIGINT org_unit_id PK
    BIGINT parent_unit_id FK
    VARCHAR unit_name
    VARCHAR unit_type
    VARCHAR unit_code UK
    BOOLEAN is_active
    DATETIME created_at
    DATETIME updated_at
  }

  PROGRAMS {
    BIGINT program_id PK
    BIGINT owning_unit_id FK
    BIGINT created_by_user_id FK
    VARCHAR program_name
    TEXT description
    ENUM program_status
    DATETIME created_at
    DATETIME updated_at
  }

  PROGRAM_ADMIN_ASSIGNMENTS {
    BIGINT assignment_id PK
    BIGINT program_id FK
    BIGINT user_id FK
    BIGINT assigned_by_user_id FK
    ENUM assignment_status
    DATETIME assigned_at
    DATETIME revoked_at
  }

  EVENTS {
    BIGINT event_id PK
    BIGINT program_id FK
    BIGINT created_by_user_id FK
    VARCHAR event_title
    TEXT event_description
    VARCHAR venue
    DATE event_date
    VARCHAR event_code UK
    VARCHAR public_attendance_url
    VARCHAR qr_code_path
    ENUM event_status
    DATETIME opened_at
    DATETIME closed_at
    DATETIME created_at
    DATETIME updated_at
  }

  ATTENDANCE_FORM_FIELDS {
    VARCHAR field_key PK
    VARCHAR field_label
    BOOLEAN default_is_required
    BOOLEAN is_admin_configurable
    SMALLINT display_order UK
  }

  EVENT_ATTENDANCE_FIELD_SETTINGS {
    BIGINT event_id PK,FK
    VARCHAR field_key PK,FK
    BOOLEAN is_required
    DATETIME created_at
    DATETIME updated_at
  }

  ATTENDANCE_RECORDS {
    BIGINT attendance_id PK
    BIGINT event_id FK
    VARCHAR first_name
    VARCHAR middle_name
    VARCHAR last_name
    VARCHAR suffix
    VARCHAR affiliation
    VARCHAR designation_category
    ENUM sex
    VARCHAR email
    BOOLEAN consent_documentation_publication
    BOOLEAN consent_database_processing
    VARCHAR signature_text
    VARCHAR signature_image_path
    DATETIME submitted_at
    ENUM attendance_status
    BOOLEAN duplicate_flag
    DATETIME created_at
    DATETIME updated_at
  }

  ATTENDANCE_RECORD_ADDRESSES {
    BIGINT address_id PK
    BIGINT attendance_id FK
    VARCHAR region_code FK
    VARCHAR province_code FK
    VARCHAR city_municipality_code FK
    VARCHAR barangay_code FK
    VARCHAR street_address
    VARCHAR postal_code
    DATETIME created_at
    DATETIME updated_at
  }

  ATTENDANCE_SHEET_EXPORTS {
    BIGINT export_id PK
    BIGINT event_id FK
    BIGINT exported_by_user_id FK
    ENUM export_format
    VARCHAR file_path
    INT total_records
    DATETIME exported_at
  }

  AUDIT_LOGS {
    BIGINT audit_log_id PK
    BIGINT user_id FK
    VARCHAR action
    VARCHAR entity_type
    BIGINT entity_id
    VARCHAR description
    JSON old_values_json
    JSON new_values_json
    VARCHAR ip_address
    VARCHAR user_agent
    DATETIME created_at
  }

  PSGC_REGIONS {
    VARCHAR region_code PK
    VARCHAR region_name
    BOOLEAN is_active
    DATETIME created_at
    DATETIME updated_at
  }

  PSGC_PROVINCES {
    VARCHAR province_code PK
    VARCHAR region_code FK
    VARCHAR province_name
    BOOLEAN is_active
    DATETIME created_at
    DATETIME updated_at
  }

  PSGC_CITIES_MUNICIPALITIES {
    VARCHAR city_municipality_code PK
    VARCHAR region_code FK
    VARCHAR province_code FK
    VARCHAR city_municipality_name
    ENUM city_municipality_type
    BOOLEAN is_active
    DATETIME created_at
    DATETIME updated_at
  }

  PSGC_BARANGAYS {
    VARCHAR barangay_code PK
    VARCHAR city_municipality_code FK
    VARCHAR barangay_name
    BOOLEAN is_active
    DATETIME created_at
    DATETIME updated_at
  }
